Update and rename cache.yml to codeql.yml
Signed-off-by: Matthias Fax <matthias.fax@gmail.com>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,19 +45,19 @@ jobs:
         uses: fwilhe2/setup-kotlin@0.6.0
         with:
           install-native: true
-      - name: initialize CodeQL
+      - name: initialize CodeQL for python
         uses: github/codeql-action/init@v2.20.4
         with:
           languages: python
-      - name: initialize CodeQL
+      - name: initialize CodeQL for java
         uses: github/codeql-action/init@v2.20.4
         with:
           languages: java
-      - name: initialize CodeQL
+      - name: initialize CodeQL for golang
         uses: github/codeql-action/init@v2.20.4
         with:
           languages: go
-      - name: initialize CodeQL
+      - name: initialize CodeQL for javascript
         uses: github/codeql-action/init@v2.20.4
         with:
           languages: javascript
