--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,5 +1,9 @@
 name: upload tool cache
-on: push
+on:
+  push:
+    branches: [main]
+  schedule:
+    - cron: '30 12 * * 4'
 jobs:
   upload_tool_cache:
     name: combined cache
@@ -9,6 +13,10 @@ jobs:
       security-events: write
     runs-on: ubuntu-22.04
     steps:
+      - name: remove old artifacts
+        uses: c-hive/gha-remove-artifacts@v1.2.0
+        with:
+          age: '1 day'
       - name: check out repository
         uses: actions/checkout@v3.5.3
       - name: clear any existing tool cache
@@ -51,7 +59,7 @@ jobs:
         uses: fwilhe2/setup-kotlin@0.6.0
         with:
           install-native: true
-      - name: initialize CodeQL for python
+      - name: initialize CodeQL
         uses: github/codeql-action/init@v2.20.4
         with:
           languages: python, go, java, javascript
