fix(python): use correct versions job id in matrix path

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,7 +40,7 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        python-version: ${{ fromJson(needs.generate.outputs.matrix) }}
+        python-version: ${{ fromJson(needs.versions.outputs.matrix) }}
     steps:
       - name: check out repository
         uses: actions/checkout@v3.5.3
