build(python): use 100 day cutoff for supported version range

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,16 +17,22 @@ jobs:
       - name: clear the existing python tool cache
         run: |
           rm -rf "${{ runner.tool_cache }}/Python"
+
   versions:
     name: supported versions
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.release.outputs.matrix }}
+      matrix: ${{ steps.release.outputs.version }}
     steps:
+      - name: get date for 100 days ago
+        run: echo "version_date=$(date '+%F' --date='100 days ago')" >> "$GITHUB_ENV"
       - id: release
         uses: actions-matrix/release-matrix-action@v1.0.5
         with:
           search: python
+          date: ${{ env.version_date }}
+          limit: 8
+
   update:
     name: update python ${{ matrix.python-version }}
     needs: [clear, versions]
