--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,6 +2,8 @@ name: codeQL tool cache
 on:
   push:
     branches: [main]
+    paths:
+      - '.github/workflows/codeql.yml'
   schedule:
     - cron: '0 8 * * *'
 jobs:
