--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,6 +2,10 @@ name: python tool cache
 on:
   push:
     branches: [main]
+    paths:
+      - '.github/workflows/python.yml'
+      - '**/*.py'
+      - '**/pyproject.toml'
   schedule:
     - cron: '0 8 * * *'
 jobs:
