--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,7 +24,7 @@ jobs:
     needs: [clear]
     permissions:
       actions: read
-      contents: write
+      contents: read
       security-events: write
     runs-on: [self-hosted, provider]
     defaults:
