--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -42,7 +42,7 @@ jobs:
     needs: [clear, versions]
     permissions:
       actions: read
-      contents: write
+      contents: read
       security-events: write
     runs-on: [self-hosted, provider]
     defaults:
