ci: add minimum permissions to versions jobs

--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -24,6 +24,8 @@ jobs:
   versions:
     name: supported versions
     runs-on: ubuntu-latest
+    permissions:
+      contents: none
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
     steps:
