--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,6 +27,8 @@ jobs:
   versions:
     name: supported versions
     runs-on: ubuntu-latest
+    permissions:
+      contents: none
     outputs:
       matrix: ${{ steps.release.outputs.version }}
     steps:
