--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,9 +18,10 @@ jobs:
       run:
         shell: bash
     steps:
-      - name: clear the existing python tool cache
+      - name: clear the existing CodeQL tool cache
         run: |
           rm -rf "${{ runner.tool_cache }}/CodeQL"
+
   update:
     name: update CodeQL
     needs: [clear]
