ci: migrate workflows to provider environment

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,7 +24,8 @@ jobs:
 
   update:
     name: update CodeQL
-    needs: [clear]
+    needs: clear
+    environment: provider
     permissions:
       actions: read
       contents: read
