--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,6 +22,7 @@ jobs:
   update:
     name: update python ${{ matrix.python-version }}
     needs: prepare
+    environment: provider
     permissions:
       actions: read
       contents: read
