ci(codeql): add codeql clear job to provider environment

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,6 +14,7 @@ jobs:
     permissions:
       contents: none
     runs-on: [self-hosted, provider]
+    environment: provider
     defaults:
       run:
         shell: bash
