ci: accept dispatch events for all workflows

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     paths:
       - '.github/workflows/codeql.yml'
+  workflow_dispatch:
   schedule:
     - cron: '0 8 * * *'
 
