--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,6 +7,7 @@ on:
       - '.github/workflows/python.yml'
       - '**/*.py'
       - '**/pyproject.toml'
+  workflow_dispatch:
   schedule:
     - cron: '0 8 * * *'
 
