fix(maintain): pass secrets to reusable gcloud workflow

--- a/.github/workflows/maintain.yml
+++ b/.github/workflows/maintain.yml
@@ -59,6 +59,7 @@ jobs:
     name: initiate patch job on ${{ inputs.language }}
     concurrency: github-${{ inputs.language }}
     uses: ./.github/workflows/gcloud.yml
+    secrets: inherit
     permissions:
       contents: read
       id-token: write
