--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,8 +8,8 @@ on:
       - '**/*.py'
       - '**/pyproject.toml'
   workflow_dispatch:
-  schedule:
-    - cron: '0 8 * * *'
+
+concurrency: github-python
 
 jobs:
   prepare:
@@ -28,7 +28,10 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    runs-on: [self-hosted, provider]
+    runs-on:
+      - self-hosted
+      - provider
+      - python
     defaults:
       run:
         shell: bash
