fix(maintain): use needs instead of concurrency groups
cancel-pending is not supported by GitHub (yet), so needs is the only workaround to prevent the scheduler from cancelling queued jobs in the same concurrency group

--- a/.github/workflows/maintain.yml
+++ b/.github/workflows/maintain.yml
@@ -13,9 +13,6 @@ concurrency: github-${{ inputs.language }}
 jobs:
   clean:
     name: clean cache on ${{ matrix.language }}
-    concurrency:
-      group: github-${{ inputs.language }}
-      cancel-in-progress: false
     permissions:
       contents: none
     runs-on:
@@ -42,11 +39,21 @@ jobs:
         if: inputs.language == 'go'
         run: |
           rm -rfv ~/go
+
+  patch:
+    name: initiate patch job on ${{ inputs.language }}
+    needs: clean
+    uses: ./.github/workflows/gcloud.yml
+    secrets: inherit
+    permissions:
+      contents: read
+      id-token: write
+    with:
+      subcommand: os-config patch-jobs execute --instance-filter-names=zones/europe-north1-b/instances/gh-${{ inputs.language }}-ubuntu-22 --display-name=gh-${{ inputs.language }}-ubuntu-22-apt-upgrade --duration=3600s --reboot-config=default --rollout-mode=zone-by-zone --rollout-disruption-budget-percent=25 --description="apt upgrade on GitHub Runner Ubuntu 22.04 with ${{ inputs.language }} tools"
+
   update:
     name: update snaps on ${{ inputs.language }}
-    concurrency:
-      group: github-${{ inputs.language }}
-      cancel-in-progress: false
+    needs: patch
     permissions:
       contents: none
     runs-on:
@@ -61,15 +68,3 @@ jobs:
       - name: update nodejs snap
         run: |
           sudo snap refresh node --classic
-  patch:
-    name: initiate patch job on ${{ inputs.language }}
-    concurrency:
-      group: github-${{ inputs.language }}
-      cancel-in-progress: false
-    uses: ./.github/workflows/gcloud.yml
-    secrets: inherit
-    permissions:
-      contents: read
-      id-token: write
-    with:
-      subcommand: os-config patch-jobs execute --instance-filter-names=zones/europe-north1-b/instances/gh-${{ inputs.language }}-ubuntu-22 --display-name=gh-${{ inputs.language }}-ubuntu-22-apt-upgrade --duration=3600s --reboot-config=default --rollout-mode=zone-by-zone --rollout-disruption-budget-percent=25 --description="apt upgrade on GitHub Runner Ubuntu 22.04 with ${{ inputs.language }} tools"
