chore(gcloud): ignore warning from setup-gcloud by setting empty version

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -37,6 +37,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v1.1.1
         with:
           skip_install: true
+          version: ''
           project_id: github-matfax
       - name: execute gcloud compute job
         id: command
