build(gcloud): use proper error formatting for error messages

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -46,11 +46,16 @@ jobs:
       - name: execute gcloud ${{ inputs.command }} job
         id: command
         run: |
-          RESULT=$(gcloud ${{ inputs.command }} ${{ inputs.subcommand }} --quiet) ; STATUS=$?
+          {
+            RESULT=$(gcloud ${{ inputs.command }} ${{ inputs.subcommand }} --quiet) ; STATUS=${PIPESTATUS[0]}
+          } 2> >(tee /tmp/stderr.log >&2)
+          
           if [[ $STATUS -ne 0 ]]; then
-            echo "Error running gcloud command"
+            ERROR=$(tail -n 1 /tmp/stderr.log)
+            echo "::error::$ERROR"
             exit $STATUS
           fi
+          
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "result<<$EOF" >> "$GITHUB_OUTPUT"
           echo "$RESULT" >> "$GITHUB_OUTPUT"
