--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,7 +12,7 @@ concurrency: github-${{ inputs.language }}
 
 jobs:
   check:
-    name: check ${{ inputs.language }} instance
+    name: check ${{ inputs.language }} runner
     uses: ./.github/workflows/gcloud.yml
     secrets: inherit
     permissions:
@@ -32,6 +32,7 @@ jobs:
     with:
       command: beta compute
       subcommand: machine-images delete gh-${{ inputs.language }}-ubuntu-22
+      credentials_file: ${{ needs.check.outputs.credentials_file }}
 
   backup:
     name: backup ${{ inputs.language }} runner
@@ -46,3 +47,4 @@ jobs:
     with:
       command: beta compute
       subcommand: machine-images create gh-${{ inputs.language }}-ubuntu-22 --source-instance=gh-${{ inputs.language }}-ubuntu-22 --source-instance-zone=europe-north1-b --storage-location=europe-north1 --description="GitHub Runner on Ubuntu 22.04 LTS with ${{ inputs.language }} tools"
+      credentials_file: ${{ needs.check.outputs.credentials_file }}
