--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -34,7 +34,7 @@ jobs:
       id-token: write
     outputs:
       result: ${{ steps.command.outputs.stdout }}
-      credentials_file: ${{ steps.credentials_filename.outputs.filename and (inputs.credentials_file == '' or steps.restore.outputs.cache-hit != 'true') or inputs.credentials_file }}
+      credentials_file: ${{ steps.credentials_filename.outputs.filename && (inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true') || inputs.credentials_file }}
     runs-on: ubuntu-latest
     steps:
       - name: check out repository
@@ -49,7 +49,7 @@ jobs:
       - id: auth
         name: authenticate to Google Cloud
         uses: google-github-actions/auth@v1.1.1
-        if: inputs.credentials_file == '' or steps.restore.outputs.cache-hit != 'true'
+        if: inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true'
         with:
           workload_identity_provider: ${{ secrets.ID_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT }}
@@ -72,12 +72,12 @@ jobs:
           script: core.setFailed(steps.command.outputs.stderr.split('\n').pop())
       - name: determine name of credentials file
         id: credentials_filename
-        if: inputs.credentials_file == '' or steps.restore.outputs.cache-hit != 'true'
+        if: inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true'
         run: |
           echo "filename=$(echo '${{ steps.auth.outputs.credentials_file_path }}' | sed 's/.*\/\(.*\)\.json/\1/')" >> $GITHUB_OUTPUT
       - name: cache gcloud credentials
         uses: actions/cache/save@v3.3.1
-        if: inputs.credentials_file == '' or steps.restore.outputs.cache-hit != 'true'
+        if: inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true'
         with:
           path: ${{ github.workspace }}/${{ steps.credentials_filename.outputs.filename }}.json
           key: ${{ github.run_id }}-gcloud-credentials-${{ steps.credentials_filename.outputs.filename }}
