--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -69,7 +69,7 @@ jobs:
         if: steps.command.outputs.exitcode != '0'
         uses: actions/github-script@v6.4.1
         with:
-          script: core.setFailed(steps.command.outputs.stderr.split('\n').pop())
+          script: core.setFailed('{{ steps.command.outputs.stderr }}'.split('\n').pop())
       - name: determine name of credentials file
         id: credentials_filename
         if: inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true'
