--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -68,8 +68,10 @@ jobs:
       - name: escalate error message if error occurred
         if: steps.command.outputs.exitcode != '0'
         uses: actions/github-script@v6.4.1
+        env:
+          STDERR: ${{ steps.command.outputs.stderr }}
         with:
-          script: core.setFailed('${{ steps.command.outputs.stderr }}'.split('\n').pop())
+          script: core.setFailed(process.env.STDERR.split('\n').pop())
       - name: determine name of credentials file
         id: credentials_filename
         if: inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true'
