fix(gcloud): fix binary logic in credentials_file job outputs

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -34,7 +34,7 @@ jobs:
       id-token: write
     outputs:
       result: ${{ steps.command.outputs.stdout }}
-      credentials_file: ${{ steps.credentials_filename.outputs.filename && (inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true') || inputs.credentials_file }}
+      credentials_file: ${{ (inputs.credentials_file == '' || steps.restore.outputs.cache-hit != 'true') && steps.credentials_filename.outputs.filename || inputs.credentials_file }}
     runs-on: ubuntu-latest
     steps:
       - name: check out repository
