--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -69,7 +69,8 @@ jobs:
         if: steps.command.outputs.exitcode != '0'
         uses: actions/github-script@v6.4.1
         env:
-          STDERR: ${{ steps.command.outputs.stderr }}
+          STDERR: |
+            ${{ steps.command.outputs.stderr }}
         with:
           script: core.setFailed(process.env.STDERR.split('\n').pop())
       - name: determine name of credentials file
