--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -45,16 +45,10 @@ jobs:
           version: ''
           project_id: github-matfax
       - name: execute gcloud ${{ inputs.command }} job
-        uses: maddog2050/executable-wrapper@v1.0.9
-        id: command
-        continue-on-error: true
-        with:
-          run_command: gcloud ${{ inputs.command }} ${{ inputs.subcommand }} --quiet --format="json"
-      - name: escalate error message if error occurred
-        if: steps.command.outputs.exitcode != '0'
         uses: actions/github-script@v6.4.1
-        env:
-          STDERR: |
-            ${{ steps.command.outputs.stderr }}
         with:
-          script: core.setFailed(process.env.STDERR.split('\n').pop())
+          script: |
+            const output = await exec.getExecOutput('gcloud', ['${{ inputs.command }}', '${{ inputs.subcommand }}', '--quiet', '--format="json"'])
+            if (output.exitCode !== 0) {
+              core.setFailed(output.stderr.split('\n').pop())
+            }
