--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -48,7 +48,10 @@ jobs:
         uses: actions/github-script@v6.4.1
         with:
           script: |
-            const output = await exec.getExecOutput('gcloud', ['${{ inputs.command }}', '${{ inputs.subcommand }}', '--quiet', '--format="json"'])
+            const { parseArgsStringToArgv } = require('string-argv')
+            const commandArgs = parseArgsStringToArgv('${{ inputs.command }}')
+            const subCommandArgs = parseArgsStringToArgv('${{ inputs.subcommand }}')
+            const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, '--quiet', '--format="json"'])
             if (output.exitCode !== 0) {
               core.setFailed(output.stderr.split('\n').pop())
             }
