fix(gcloud): add npm dependencies to project

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -44,6 +44,11 @@ jobs:
           skip_install: true
           version: ''
           project_id: github-matfax
+      - name: set up Node.js
+        uses: actions/setup-node@v3.7.0
+        with:
+          node-version: lts
+          cache: npm
       - name: execute gcloud ${{ inputs.command }} job
         uses: actions/github-script@v6.4.1
         with:
